Bug Fix scrollbar

--- a/src/style/css/home.css
+++ b/src/style/css/home.css
@@ -3,6 +3,16 @@
     background-size: 100%;
 }
 
+.home-container-fixo{
+    overflow: scroll;
+    width: 100vw;
+    padding-bottom: 50px;
+}
+
+.home-container-fixo::-webkit-scrollbar {
+    display: none;
+}
+
 .col-home{
     box-shadow: -2px 5px 12px -2px rgba(0,0,0,0.81);
 }
